css/index.css
/* Universal Star Selector */
* ,
*::after ,
*::before {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

/* Css Root Variables */
:root {
	--soft-white: #f1f1f1;
}

/* Body And Html Tag */
html { font-size: 62.5% }
body{
	width: 100%;
	height: auto;
	min-width: 100vw;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
}

/* IpInfo Form */
#form {
	margin: 1rem;
}

/* ipInfo Data Container */
.data-container {
	width: 100%;
	height: auto;
	padding: 1rem;
	overflow-wrap: wrap;
}

